# ml-pipline

containers/custom_job/: Dockerfile  cloudbuild.yml  main.py  pyproject.toml
